fix passion bug

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1053,74 +1053,66 @@ html {
 
 .hero-0s {
   display: inline-block;
-  transition: 250ms;
 }
 
 .hero-passion:hover .hero-0s {
-  animation: title 0.7s linear 1 0s alternate-reverse;
+  animation: title 0.5s linear 1 0s alternate-reverse;
 }
 
 .hero-100ms {
   display: inline-block;
-  transition: 250ms;
 }
 
 .hero-passion:hover .hero-100ms {
-  animation: title 0.7s linear 1 100ms alternate-reverse;
+  animation: title 0.5s linear 1 100ms alternate-reverse;
 }
 
 .hero-200ms {
   display: inline-block;
-  transition: 250ms;
 }
 
 .hero-passion:hover .hero-200ms {
-  animation: title 0.7s linear 1 200ms alternate-reverse;
+  animation: title 0.5s linear 1 200ms alternate-reverse;
 }
 
 .hero-300ms {
   display: inline-block;
-  transition: 250ms;
 }
 
 .hero-passion:hover .hero-300ms {
-  animation: title 0.7s linear 1 300ms alternate-reverse;
+  animation: title 0.5s linear 1 300ms alternate-reverse;
 }
 
 .hero-400ms {
   display: inline-block;
-  transition: 250ms;
 }
 
 .hero-passion:hover .hero-400ms {
-  animation: title 0.7s linear 1 400ms alternate-reverse;
+  animation: title 0.5s linear 1 400ms alternate-reverse;
 }
 
 .hero-500ms {
   display: inline-block;
-  transition: 250ms;
 }
 
 .hero-passion:hover .hero-500ms {
-  animation: title 0.7s linear 1 500ms alternate-reverse;
+  animation: title 0.5s linear 1 500ms alternate-reverse;
 }
 
 .hero-600ms {
   display: inline-block;
-  transition: 250ms;
 }
 
 .hero-passion:hover .hero-600ms {
-  animation: title 0.7s linear 1 600ms alternate-reverse;
+  animation: title 0.5s linear 1 600ms alternate-reverse;
 }
 
 .hero-700ms {
   display: inline-block;
-  transition: 250ms;
 }
 
 .hero-passion:hover .hero-700ms {
-  animation: title 0.7s linear 1 700ms alternate-reverse;
+  animation: title 0.5s linear 1 700ms alternate-reverse;
 }
 
 .hero-buttons-list {
@@ -2130,6 +2122,7 @@ html {
 }
 
 .reviews .text-wrap {
+  position: relative;
   padding: 30px;
   margin-bottom: 30px;
   background-color: #fafafa;
@@ -2142,9 +2135,6 @@ html {
   font-size: 12px;
   line-height: 2.55;
   text-align: center;
-  color: #000000;
-  text-decoration: underline;
-  text-underline-position: auto;
 }
 
 .reviews .text::before {
@@ -2188,11 +2178,13 @@ html {
 
 .slider {
   position: relative;
+  padding-top: 20px;
+  box-shadow: 0px 8px 50px rgba(212, 20, 67, 0.6);
 }
 
 @media screen and (min-width: 768px) {
   .slider {
-    padding: 0px 50px;
+    padding: 20px 50px 0px 50px;
   }
 }
 
@@ -2252,13 +2244,15 @@ html {
 
 .slider .slick-dots li {
   width: 12px;
+  margin-right: 16px;
+  margin-left: 16px;
 }
 
 .slider .slick-dots button {
   font-size: 12px;
   width: 12px;
   height: 12px;
-  background-color: #d9d9d9;
+  background-color: #ffffff;
   border-radius: 50%;
 }
 
@@ -2277,6 +2271,23 @@ html {
   background-color: transparent;
 }
 
+.slider-gradient {
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  background-image: linear-gradient(180deg, #e1e1e1 1.61%, #fafafa 0, #fafafa 50%, #e1e1e1 0, #e1e1e1 51.61%, #fafafa 0, #fafafa);
+  background-size: 62px 60px;
+}
+
+.slider-inside {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 55px 21px 20px;
+}
+
 .location {
   font-family: DM Sans, sans-serif;
   margin-right: auto;
@@ -2284,6 +2295,19 @@ html {
   padding-bottom: 56.5px;
   text-align: center;
   background: #fff5f6;
+  margin-bottom: 113px;
+}
+
+@media screen and (min-width: 768px) {
+  .location {
+    margin-bottom: 158px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .location {
+    margin-bottom: 165px;
+  }
 }
 
 .location-container {
@@ -2345,7 +2369,7 @@ html {
 }
 
 .location-cards:hover, .location-cards:focus {
-  box-shadow: 0px 8px 50px rgba(212, 20, 67, 0.6);
+  box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.4);
   transition: 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -2605,7 +2629,8 @@ html {
 .location-button:hover, .location-button:focus {
   transform: scale(1.1);
   outline: 0;
-  background-color: #ecebeb;
+  box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.4);
+  transition: 250ms;
 }
 
 @media screen and (min-width: 1200px) {
