--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -27,7 +27,8 @@
   screen and (min-resolution: 2dppx) {
     background-image: url(../images/problems/campfire@2x.png);    
     }
-}}
+}
+}
 .problems-content {
     position: absolute;
     top: 205px;
