Делает секцию локации кроме свг иконок на кнопках

--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -76,8 +76,10 @@
       </li>
     </ul>
        <div class="button-box-location">
-          <button class="button button-location">Our Locations</button>
-          <button class="button-secondary button-Franchise">Franchise</button>
+          <button class="button button-location">Our Locations
+          </button>
+          <button class="button-secondary button-Franchise">Franchise
+          </button>
        </div>
   </div>
 </section>
