--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -81,10 +81,10 @@
         }
       }
       .label-cafe {
-        background-color: #f0d1a5;
+        background-color: $labelCafecolor;
       }
       .label-food-truck {
-        background-color: #c2e297;
+        background-color: $labelFoodtrukcolor;
       }
     }
   }
@@ -110,7 +110,7 @@
       height: 1px;
 
       width: 100%;
-      border-bottom: 1px solid #e1e1e1;
+      border-bottom: 1px solid $locationBandcolor;
 
       @include for-size(tablet) {
         bottom: -30px;
