--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -15,7 +15,12 @@ $secondaryTextColor: #907e82;
 // Фон мобильного меню
 $mobileMenuColor: #e17992;
 
-
 // Фон героя
 $heroBgColor: #ffb8ca;
 
+// цвет фона на лейблах в локации
+$labelCafecolor: #f0d1a5;
+$labelFoodtrukcolor: #c2e297;
+
+// цвет для полоски в карточках локации
+$locationBandcolor: #e1e1e1;
