--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -13,9 +13,25 @@
   border: none;
 
   &.button-location {
-    background-color: #d41342;
-    width: 181px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 10px;
+    width: 181px;
+
+    background-color: #d41342;
+
+    &::after {
+      content: '';
+      display: block;
+      width: 5px;
+      height: 8px;
+      margin-left: 14px;
+      background-image: url();
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-color: black;
+    }
 
     @include for-size(tablet) {
       margin-right: 15px;
@@ -48,7 +64,21 @@
   border: none;
 
   &.button-Franchise {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 181px;
+
+    &::after {
+      content: '';
+      display: block;
+      width: 5px;
+      height: 8px;
+      margin-left: 14px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-color: black;
+    }
 
     @include for-size(tablet) {
       margin-left: 0;
