fix passion bug

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1053,66 +1053,74 @@ html {
 
 .hero-0s {
   display: inline-block;
+  transition: 250ms;
 }
 
 .hero-passion:hover .hero-0s {
-  animation: title 0.5s linear 1 0s alternate-reverse;
+  animation: title 0.7s linear 1 0s alternate-reverse;
 }
 
 .hero-100ms {
   display: inline-block;
+  transition: 250ms;
 }
 
 .hero-passion:hover .hero-100ms {
-  animation: title 0.5s linear 1 100ms alternate-reverse;
+  animation: title 0.7s linear 1 100ms alternate-reverse;
 }
 
 .hero-200ms {
   display: inline-block;
+  transition: 250ms;
 }
 
 .hero-passion:hover .hero-200ms {
-  animation: title 0.5s linear 1 200ms alternate-reverse;
+  animation: title 0.7s linear 1 200ms alternate-reverse;
 }
 
 .hero-300ms {
   display: inline-block;
+  transition: 250ms;
 }
 
 .hero-passion:hover .hero-300ms {
-  animation: title 0.5s linear 1 300ms alternate-reverse;
+  animation: title 0.7s linear 1 300ms alternate-reverse;
 }
 
 .hero-400ms {
   display: inline-block;
+  transition: 250ms;
 }
 
 .hero-passion:hover .hero-400ms {
-  animation: title 0.5s linear 1 400ms alternate-reverse;
+  animation: title 0.7s linear 1 400ms alternate-reverse;
 }
 
 .hero-500ms {
   display: inline-block;
+  transition: 250ms;
 }
 
 .hero-passion:hover .hero-500ms {
-  animation: title 0.5s linear 1 500ms alternate-reverse;
+  animation: title 0.7s linear 1 500ms alternate-reverse;
 }
 
 .hero-600ms {
   display: inline-block;
+  transition: 250ms;
 }
 
 .hero-passion:hover .hero-600ms {
-  animation: title 0.5s linear 1 600ms alternate-reverse;
+  animation: title 0.7s linear 1 600ms alternate-reverse;
 }
 
 .hero-700ms {
   display: inline-block;
+  transition: 250ms;
 }
 
 .hero-passion:hover .hero-700ms {
-  animation: title 0.5s linear 1 700ms alternate-reverse;
+  animation: title 0.7s linear 1 700ms alternate-reverse;
 }
 
 .hero-buttons-list {
