--- a/src/sass/components/hero/_hero.scss
+++ b/src/sass/components/hero/_hero.scss
@@ -81,8 +81,10 @@
 }
 // для анимации PASSION
 
+$time-delay: 0s, 100ms, 200ms, 300ms, 400ms, 500ms, 600ms, 700ms;
+
 @mixin name-animation($delay) {
-  animation: title 0.5s linear 1 $delay alternate-reverse;
+  animation: title 0.7s linear 1 $delay alternate-reverse;
 }
 
 @keyframes title {
@@ -93,11 +95,11 @@
     scale: (1.5);
   }
 }
-$time-delay: 0s, 100ms, 200ms, 300ms, 400ms, 500ms, 600ms, 700ms;
 
 @each $iconName in $time-delay {
   .hero-#{$iconName} {
     display: inline-block;
+    transition: 250ms;
 
     .hero-passion:hover & {
       @include name-animation($iconName);
