закончино позиционирование таблет

--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -42,6 +42,16 @@
     margin-left: (59px -20px);
   }
 }
+.content-manufacture {
+  @include for-size(tablet) {
+    display: flex;
+    margin-top: 55px;
+  }
+}
+.picture {
+  min-width: 340px;
+  margin-right: 17px;
+}
 
 .primary-text-manufacture {
   font-family: 'DM Sans' sans-serif;
@@ -56,10 +66,12 @@
   @include for-size(tablet) {
     font-size: 14px;
     line-height: 1.76;
+    margin-bottom: 35px;
   }
   @include for-size(desktop) {
     font-size: 16px;
     line-height: 1.76;
+    margin-bottom: 35px;
   }
 }
 .secondary-text-manufacture {
@@ -91,6 +103,8 @@
   @include for-size(tablet) {
     font-size: 16px;
     line-height: 1.312;
+    margin-right: 25%;
+    margin-bottom: 146px;
   }
   @include for-size(desktop) {
     font-size: 16px;
