--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,23 +1,19 @@
 .container {
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
-}
-@media screen and (min-width: 320px) {
-  .container {
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media screen and (min-width: 320px) {
     max-width: 320px;
-    padding-left: 20px;
-    padding-right: 20px;
   }
-}
-@media screen and (min-width: 768px) {
-  .container {
+  @media screen and (min-width: 768px) {
     max-width: 768px;
     padding-left: 40px;
     padding-right: 40px;
   }
-}
-@media screen and (min-width: 1344px) {
-  .container {
+  @media screen and (min-width: 1344px) {
     max-width: 1344px;
     padding-left: 15px;
     padding-right: 15px;
