--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -24,7 +24,7 @@
         </li>
         <li class="problems__list--item">
           04
-          <p class="list--item-text">Поодготовка в одиночку</p>
+          <p class="list--item-text">Подготовка в одиночку</p>
         </li>
         <li class="problems__list--item">
           05
