--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -35,7 +35,8 @@
 /*mobile*/
 @media screen and (max-width: 767px) {
   .hero {
-    padding-top: 50px;
+    margin-top: 100px;
+    padding-top: 9px;
   }
   .hero-wave-box {
     min-height: 550px;
@@ -103,7 +104,7 @@
 /*tablet*/
 @media screen and (min-width: 768px) and (max-width: 1343px) {
   .hero {
-    padding-top: 70px;
+    margin-top: 157px;
   }
   .hero-wave-box {
     min-height: 450px;
@@ -124,6 +125,10 @@
 
     font-size: 26px;
     line-height: 1.3;
+  }
+
+  .hero-text--orange {
+    margin-bottom: 30px;
   }
 
   .hero-text-desktop--orange {
@@ -168,18 +173,18 @@
 /*desktop*/
 @media screen and (min-width: 1344px) {
   .hero {
-    padding-top: 45px;
+    margin-top: 20px;
   }
   .hero-wave-box {
     min-height: 880px;
     background-image: url('../images/hero/hero-desktop.png');
     background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: cover;
+    background-position: center;
+    background-size: auto;
   }
 
   .hero-left {
-    padding-top: 125px;
+    padding-top: 208px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -209,7 +214,8 @@
   }
   /**********************/
   .hero-service {
-    padding-bottom: 50px;
+    padding-top: 65px;
+    padding-bottom: 130px;
   }
   .hero-service-list {
     display: flex;
