Пофиксил фон Героя

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -94,7 +94,7 @@
 
     background-repeat: no-repeat;
     background-size: 208px 178px, 320px 665px;
-    background-position: top 334px center, top center;
+    background-position: top 334px center, top -60px center;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -120,7 +120,7 @@
 
     background-repeat: no-repeat;
     background-size: 376px 322px, 768px 605px;
-    background-position: left calc(50% + 188px) top 84px, top center;
+    background-position: left calc(50% + 188px) top 84px, top -82px center;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -163,7 +163,7 @@
       url(../images/hero/desctop_hero-bg.png);
 
     background-size: 843px 720px, 1668px 912px;
-    background-position: top 46px left calc(50% + 376px), top center;
+    background-position: top 46px left calc(50% + 376px), top -85px center;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
