--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,59 +1,74 @@
-<header>
-    <img src="" alt="logo" />
+<header class="header">
+  <div class="header-block">
+    <a href="./index.html" class="logo">
+      <img src="./images/header/mob-logo.png" alt="logo" />
+    </a>
 
-    <!-- ========== mobile/tablet header  ============-->
-
-    <div>
-        <!-- burger-menu-btn -->
-        <button>
-            <svg>
-                <use href=""></use>
-            </svg>
-        </button>
-        <!-- mobile/tablet menu -->
-        <div>
-            <button type="button">Buy now</button>
-        </div>
-
-        <ul>
-            <li>
-                <a href="">Home</a>
-            </li>
-            <li><a href="">About us</a></li>
-            <li>
-                <a href="">How it’s made?</a>
-            </li>
-            <li>
-                <a href="">Our products</a>
-            </li>
-            <li>
-                <a href="">Contact</a>
-            </li>
-        </ul>
-    </div>
-    <!-- ------------------ -->
-
-    <!-- ========= descktop header ============ -->
-    <nav>
-        <div>
-            <ul>
-                <li>
-                    <a href="">Home</a>
-                </li>
-                <li><a href="">About us</a></li>
-                <li>
-                    <a href="">How it’s made?</a>
-                </li>
-                <li>
-                    <a href="">Our products</a>
-                </li>
-                <li>
-                    <a href="">Contact</a>
-                </li>
-            </ul>
-        </div>
+    <!-- burger-menu-btn -->
+    <button
+      type="button"
+      class="menu-button"
+      aria-expanded="false"
+      aria-controls="menu-container"
+      data-menu-button
+    >
+      <svg width="30" height="30" aria-label="Переключатель мобильного меню">
+        <use
+          class="icon-cross"
+          href="./images/icon/sprite.svg#icon-mobile-close"
+        ></use>
+        <use
+          class="icon-menu"
+          href="./images/icon/sprite.svg#icon-mobile-menu"
+        ></use>
+      </svg>
+    </button>
+    <!-- ===================== -->
+    <nav class="header-nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="">About us</a>
+        </li>
+        <li class="nav-item">
+          <a href="">How it’s made?</a>
+        </li>
+        <li class="nav-item">
+          <a href="">Our products</a>
+        </li>
+        <li class="nav-item">
+          <a href="">Contact</a>
+        </li>
+      </ul>
     </nav>
-    <div>
-        <button type="button">Buy now</button>
+    <div class="header-btn">
+      <button type="button">Buy now</button>
     </div>
+  </div>
 </header>
+
+<!-- mobile/tablet menu -->
+
+<div class="menu-container" id="menu-container" data-menu>
+  <div>
+    <button type="button" class="mob-menu-btn">Buy now</button>
+  </div>
+
+  <ul class="mob-menu-list">
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">Home</a>
+    </li>
+    <li class="mob-menu-item"><a class="mob-menu-link" href="">About us</a></li>
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">How it’s made?</a>
+    </li>
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">Our products</a>
+    </li>
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">Contact</a>
+    </li>
+  </ul>
+</div>
