--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -16,6 +16,7 @@
   --location-text-color: #907e82;
   --location-cafe-color: #f0d1a5;
   --button-hover-color: #ecebeb;
+  --menu-mob-bg-color: #e17992;
 }
 
 // <!-- SASS VARIABLES--> //
