--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,1 +1,170 @@
+.header {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  color: white;
 
+  position: absolute;
+  z-index: 1;
+  //   position: relative;
+  //   background-color: pink;
+  background-color: transparent;
+
+  top: 0;
+  width: 100%;
+  max-width: 1280px;
+  padding: 6px 20px 0 20px;
+
+  @media screen and (min-width: 768px) {
+    padding: 37px 34px 0 34px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 37px 115px 0 115px;
+  }
+}
+a {
+  color: inherit; //стили временно заданы через тег
+}
+
+.header .header-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menu-button {
+  z-index: 2;
+  top: 15px;
+  right: 20px;
+
+  background-size: cover;
+  position: absolute;
+  background-color: transparent;
+  stroke: var(--text-red-color);
+  margin: 0;
+  padding: 0;
+  border: none;
+
+  @media screen and (min-width: 767px) {
+    top: 50px;
+    right: 225px;
+  }
+}
+
+.menu-container {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 250px;
+  width: 100%;
+  height: 100vh;
+  padding-top: 60px;
+  background-color: var(--menu-mob-bg-color);
+
+  &.is-open {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 254px;
+  }
+
+  @media screen and (max-width: 1279px) {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .menu-button,
+  .menu-container {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .header-nav {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header-btn {
+    display: none;
+  }
+}
+
+// button: open/close===============
+.icon-cross {
+  stroke: white;
+
+  .menu-button & {
+    display: none;
+  }
+  .menu-button.is-open & {
+    display: block;
+  }
+}
+
+.icon-menu {
+  .menu-button.is-open & {
+    display: none;
+  }
+}
+// ========================================
+
+// <!-- ========= descktop header ============ -->
+.header-descktop {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  margin: 0 50px; //подобрать отступы
+}
+
+.nav-item {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  cursor: pointer;
+
+  &:not(:first-child) {
+    margin-left: 35px;
+  }
+
+  &:hover {
+    color: var(--text-red-color);
+  }
+}
+// mob-menu-style =========================
+.mob-menu-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.mob-menu-item {
+  display: inline-block;
+  padding-top: 13px;
+  padding-bottom: 11px;
+  padding-left: 21px;
+  border-top: 1px solid #e18298;
+  border-bottom: 1px solid #e18298;
+}
+
+.mob-menu-link {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  color: white;
+
+  &:hover {
+    color: var(--text-red-color);
+  }
+}
+
+.mob-menu-btn {
+  margin-bottom: 19px;
+}
