--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,80 +1,101 @@
-<!-- ---------- 🏁 ВРЕМЕННАЯ РАЗМЕТКА ---------- -->
+<!-- ---------- 📌 СЕКЦИЯ GALLERY ---------- -->
 
-<!-- 
-<section class="prev-section"></section>
- -->
+<section class="gallery-section">
+  <picture>
+    <source
+      srcset="
+        ./images/review/home-pic5-desktop.jpg    1x,
+        ./images/review/home-pic5-desktop@2x.jpg 2x
+      "
+      media="(min-width: 1200px)"
+    />
+    <source
+      srcset="
+        ./images/review/home-pic5-tablet.jpg    1x,
+        ./images/review/home-pic5-tablet@2x.jpg 2x
+      "
+      media="(min-width: 320px)"
+    />
+    <img
+      class="gallery-img"
+      srcset="./images/review/home-pic5-mobile@2x.jpg 2x"
+      src="./images/review/home-pic5-mobile.jpg"
+      alt="Product Gallery"
+    />
+  </picture>
+</section>
 
 <!-- ========== 📌 СЕКЦИЯ REVIEW ========== -->
 
-<section class="review-section container">
-  <div class="section-separate"></div>
+<section class="review-section" id="review">
+  <div class="container">
+    <!-- ---------- 🏁 СЛАЙД 1 ---------- -->
 
-  <!-- ---------- 🏁 СЛАЙД 1 ---------- -->
-
-  <div class="review-slide current-slide" id="review">
-    <img
-      class="review-slide-foto"
-      srcset="./images/review/testimonials1-desktop@2x.png 2x"
-      src="./images/review/testimonials1-desktop.png"
-      alt="Customer"
-      width="85"
-      height="85"
-    />
-    <div class="review-slide-bg">
-      <p class="review-slide-comment">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
-        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
-        in nibh vel risus.
-      </p>
+    <div class="review-slide current-slide" id="review">
+      <img
+        class="review-slide-foto"
+        srcset="./images/review/testimonials1-desktop@2x.png 2x"
+        src="./images/review/testimonials1-desktop.png"
+        alt="Customer"
+        width="85"
+        height="85"
+      />
+      <div class="review-slide-bg">
+        <p class="review-slide-comment">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+      </div>
+      <span class="review-slide-dot"></span>
+      <p class="review-slide-name">Emily, Los Angeles</p>
+      <span class="review-slide-sign current-sign-before"></span>
     </div>
-    <span class="review-slide-dot"></span>
-    <p class="review-slide-name">Emily, Los Angeles</p>
-    <span class="review-slide-sign current-sign-before"></span>
-  </div>
 
-  <!-- ---------- 🏁 СЛАЙД 2 ---------- -->
+    <!-- ---------- 🏁 СЛАЙД 2 ---------- -->
 
-  <div class="review-slide">
-    <img
-      class="review-slide-foto"
-      srcset="./images/review/testimonials2-desktop@2x.png 2x"
-      src="./images/review/testimonials2-desktop.png"
-      alt="Customer"
-      width="85"
-      height="85"
-    />
-    <div class="review-slide-bg">
-      <p class="review-slide-comment">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
-        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
-        in nibh vel risus.
-      </p>
+    <div class="review-slide">
+      <img
+        class="review-slide-foto"
+        srcset="./images/review/testimonials2-desktop@2x.png 2x"
+        src="./images/review/testimonials2-desktop.png"
+        alt="Customer"
+        width="85"
+        height="85"
+      />
+      <div class="review-slide-bg">
+        <p class="review-slide-comment">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+      </div>
+      <span class="review-slide-dot"></span>
+      <p class="review-slide-name">Emily, Los Angeles</p>
+      <span class="review-slide-sign current-sign"></span>
     </div>
-    <span class="review-slide-dot"></span>
-    <p class="review-slide-name">Emily, Los Angeles</p>
-    <span class="review-slide-sign current-sign"></span>
-  </div>
 
-  <!-- ---------- 🏁 СЛАЙД 3 ---------- -->
+    <!-- ---------- 🏁 СЛАЙД 3 ---------- -->
 
-  <div class="review-slide">
-    <img
-      class="review-slide-foto"
-      srcset="./images/review/testimonials3-desktop@2x.png 2x"
-      src="./images/review/testimonials3-desktop.png"
-      alt="Customer"
-      width="85"
-      height="85"
-    />
-    <div class="review-slide-bg">
-      <p class="review-slide-comment">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
-        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
-        in nibh vel risus.
-      </p>
+    <div class="review-slide">
+      <img
+        class="review-slide-foto"
+        srcset="./images/review/testimonials3-desktop@2x.png 2x"
+        src="./images/review/testimonials3-desktop.png"
+        alt="Customer"
+        width="85"
+        height="85"
+      />
+      <div class="review-slide-bg">
+        <p class="review-slide-comment">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+      </div>
+      <span class="review-slide-dot"></span>
+      <p class="review-slide-name">Emily, Los Angeles</p>
+      <span class="review-slide-sign current-sign-after"></span>
     </div>
-    <span class="review-slide-dot"></span>
-    <p class="review-slide-name">Emily, Los Angeles</p>
-    <span class="review-slide-sign current-sign-after"></span>
   </div>
 </section>
