--- a/src/sass/layouts/_review.scss
+++ b/src/sass/layouts/_review.scss
@@ -1,93 +1,80 @@
-// ---------- 🏁 ВРЕМЕННЫЕ СТИЛИ ----------
+// // ---------- 🏁 ВРЕМЕННЫЕ СТИЛИ ----------
 
-.container.review-section {
-  padding-left: 15px;
-  padding-right: 15px;
+// ========== 📌 СЕКЦИЯ GALLERY ==========
 
-  @media screen and (min-width: 310px) {
-    width: 310px;
-  }
-
-  @media screen and (min-width: 730px) {
-    width: 730px;
-  }
-
-  @media screen and (min-width: 1080px) {
-    width: 1080px;
-  }
-}
-
-p {
-  margin: 0;
-}
-
-// .prev-section {
-//   background-color: $secondaryBgColor;
-//   height: 400px;
-// }
-
-// ========== 📌 КАРТИНКА МЕЖДУ СЕКЦИЯМИ ==========
-
-.section-separate {
-  position: absolute;
-  left: 0;
-  top: 0;
-  transform: translateY(-39.75%);
-
-  height: 122px;
-  width: 100%;
-
-  background-image: url('../images/review/home-pic5-mobile.jpg');
+.gallery-section {
+  background-image: linear-gradient($secondaryBgColor 0% 100%);
+  background-size: 100% 39.75%;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+}
 
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: url('../images/review/home-pic5-mobile@2x.jpg');
-  }
+.gallery-img {
+  margin-left: auto;
+  margin-right: auto;
 
-  @media screen and (min-width: 730px) {
-    height: 264px;
-
-    background-image: url('../images/review/home-pic5-tablet.jpg');
-  }
-
-  @media screen and (min-device-pixel-ratio: 2) and (min-width: 730px),
-    screen and (min-resolution: 192dpi) and (min-width: 730px),
-    screen and (min-resolution: 2dppx) and (min-width: 730px) {
-    background-image: url('../images/review/home-pic5-tablet@2x.jpg');
-  }
-
-  @media screen and (min-width: 1080px) {
-    height: 430px;
-
-    background-image: url('../images/review/home-pic5-desktop.jpg');
-  }
-
-  @media screen and (min-device-pixel-ratio: 2) and (min-width: 1080px),
-    screen and (min-resolution: 192dpi) and (min-width: 1080px),
-    screen and (min-resolution: 2dppx) and (min-width: 1080px) {
-    background-image: url('../images/review/home-pic5-desktop@2x.jpg');
+  @media screen and (max-width: 767px) {
+    max-width: 480px;
+    width: 100%;
   }
 }
+
+// .section-separate {
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+//   transform: translateY(-39.75%);
+
+//   height: 122px;
+//   width: 100%;
+
+//   background-image: url('../images/review/home-pic5-mobile.jpg');
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   background-position: center;
+
+//   @media screen and (min-device-pixel-ratio: 2),
+//     screen and (min-resolution: 192dpi),
+//     screen and (min-resolution: 2dppx) {
+//     background-image: url('../images/review/home-pic5-mobile@2x.jpg');
+//   }
+
+//   @media screen and (min-width: 730px) {
+//     height: 264px;
+
+//     background-image: url('../images/review/home-pic5-tablet.jpg');
+//   }
+
+//   @media screen and (min-device-pixel-ratio: 2) and (min-width: 730px),
+//     screen and (min-resolution: 192dpi) and (min-width: 730px),
+//     screen and (min-resolution: 2dppx) and (min-width: 730px) {
+//     background-image: url('../images/review/home-pic5-tablet@2x.jpg');
+//   }
+
+//   @media screen and (min-width: 1080px) {
+//     height: 430px;
+
+//     background-image: url('../images/review/home-pic5-desktop.jpg');
+//   }
+
+//   @media screen and (min-device-pixel-ratio: 2) and (min-width: 1080px),
+//     screen and (min-resolution: 192dpi) and (min-width: 1080px),
+//     screen and (min-resolution: 2dppx) and (min-width: 1080px) {
+//     background-image: url('../images/review/home-pic5-desktop@2x.jpg');
+//   }
+// }
 
 // ========== 📌 СЕКЦИЯ REVIEW ==========
 
 .review-section {
-  position: relative;
-
-  padding-top: 154px;
+  padding-top: 80px;
   padding-bottom: 170px;
 
-  @media screen and (min-width: 730px) {
-    padding-top: 279px;
+  @include for-size(tablet) {
+    padding-top: 122px;
     padding-bottom: 197px;
   }
 
-  @media screen and (min-width: 1080px) {
-    padding-top: 382px;
+  @include for-size(desktop) {
     padding-bottom: 234px;
   }
 }
@@ -107,11 +94,11 @@ p {
 .review-slide-foto {
   margin-bottom: 29px;
 
-  @media screen and (min-width: 730px) {
+  @include for-size(tablet) {
     margin-bottom: 19px;
   }
 
-  @media screen and (min-width: 1080px) {
+  @include for-size(desktop) {
     margin-bottom: 15px;
   }
 }
@@ -126,13 +113,13 @@ p {
 
   background-color: #fafafa;
 
-  @media screen and (min-width: 730px) {
+  @include for-size(tablet) {
     width: 620px;
     padding: 47px 0 34px;
     margin-bottom: 24px;
   }
 
-  @media screen and (min-width: 1080px) {
+  @include for-size(desktop) {
     width: 926px;
     padding: 47px 0 39px;
     margin-bottom: 15px;
@@ -151,14 +138,14 @@ p {
   line-height: 2.55;
   color: $primaryTextColor;
 
-  @media screen and (min-width: 730px) {
+  @include for-size(tablet) {
     width: 460px;
 
     font-size: 14px;
     line-height: 2.16;
   }
 
-  @media screen and (min-width: 1080px) {
+  @include for-size(desktop) {
     width: 750px;
     font-size: 16px;
     line-height: 1.86;
@@ -180,12 +167,12 @@ p {
     background-repeat: no-repeat;
     background-position: center;
 
-    @media screen and (min-width: 730px) {
+    @include for-size(tablet) {
       left: -40px;
       top: -17px;
     }
 
-    @media screen and (min-width: 1080px) {
+    @include for-size(desktop) {
       left: -37px;
       top: -15px;
     }
@@ -202,7 +189,7 @@ p {
   border-radius: 50%;
   background-color: #c7133e;
 
-  @media screen and (min-width: 730px) {
+  @include for-size(tablet) {
     margin-bottom: 14px;
   }
 
@@ -242,13 +229,13 @@ p {
   text-align: center;
   color: $primaryTextColor;
 
-  @media screen and (min-width: 730px) {
+  @include for-size(tablet) {
     margin-bottom: 35px;
 
     font-size: 16px;
   }
 
-  @media screen and (min-width: 1080px) {
+  @include for-size(desktop) {
     font-size: 20px;
   }
 }
