--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@
   --slider-background-color: #fafafa;
   --location-cafe-color: #f0d1a5;
   --button-hover-color: #ecebeb;
+  --menu-mob-bg-color: #e17992;
 }
 
 .visually-hidden {
@@ -168,12 +169,24 @@ button {
 }
 
 /* --------------КНОПКИ БОЛЬШИЕ---------------------*/
-.dont-worry {
-  background-color: aqua;
-}
-
+/*      
+Формат HTML для кнопок
+<button class="btn appeal-one">
+        Our Locations
+        <svg class="btn-icon next-one">
+          <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+        </svg>
+      </button>
+      <button class="btn appeal-two">
+        Our Locations
+        <svg class="btn-icon next-two">
+          <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+        </svg>
+      </button>*/
 .btn {
   display: inline-flex;
+  align-items: center;
+  min-width: 161px;
   padding: 0 17px;
   height: 44px;
   border-radius: 22px;
@@ -191,7 +204,220 @@ header .btn {
 @media screen and (min-width: 768px) {
   .btn {
     padding: 0 30px;
-=======
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .btn {
+    padding: 0 37px;
+  }
+}
+
+.btn-icon {
+  margin-left: 8px;
+  width: 10px;
+  height: 10px;
+}
+
+.next-one {
+  fill: #ffffff;
+}
+
+.next-two {
+  fill: #d41443;
+}
+
+.appeal-one {
+  background: #d41342;
+  color: #ffffff;
+}
+
+.appeal-two {
+  background: #ffffff;
+  color: #d41443;
+}
+
+.appeal-two:hover, .appeal-two:focus {
+  background: #ecebeb;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  color: white;
+  position: absolute;
+  z-index: 1;
+  background-color: transparent;
+  top: 0;
+  width: 100%;
+  max-width: 1280px;
+  padding: 6px 20px 0 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 37px 34px 0 34px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    padding: 37px 115px 0 115px;
+  }
+}
+
+a {
+  color: inherit;
+}
+
+.header .header-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menu-button {
+  z-index: 2;
+  top: 15px;
+  right: 20px;
+  background-size: cover;
+  position: absolute;
+  background-color: transparent;
+  stroke: var(--text-red-color);
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+@media screen and (min-width: 767px) {
+  .menu-button {
+    top: 50px;
+    right: 225px;
+  }
+}
+
+.menu-container {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 250px;
+  width: 100%;
+  height: 100vh;
+  padding-top: 60px;
+  background-color: var(--menu-mob-bg-color);
+}
+
+.menu-container.is-open {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    max-width: 254px;
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .menu-container {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .menu-button,
+  .menu-container {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .header-nav {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header-btn {
+    display: none;
+  }
+}
+
+.icon-cross {
+  stroke: white;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.header-descktop {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  margin: 0 50px;
+}
+
+.nav-item {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+
+.nav-item:not(:first-child) {
+  margin-left: 35px;
+}
+
+.nav-item:hover {
+  color: var(--text-red-color);
+}
+
+.mob-menu-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.mob-menu-item {
+  display: inline-block;
+  padding-top: 13px;
+  padding-bottom: 11px;
+  padding-left: 21px;
+  border-top: 1px solid #e18298;
+  border-bottom: 1px solid #e18298;
+}
+
+.mob-menu-link {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  color: white;
+}
+
+.mob-menu-link:hover {
+  color: var(--text-red-color);
+}
+
+.mob-menu-btn {
+  margin-bottom: 19px;
+}
+
+div {
+  background-color: pink;
+}
+
 section {
   margin-left: auto;
   margin-right: auto;
@@ -225,48 +451,6 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
-  .btn {
-    padding: 0 37px;
-  }
-}
-
-.btn-icon {
-  margin-left: 8px;
-  width: 8px;
-  height: 16px;
-  height: 100%;
-}
-
-.appeal-one {
-  background: #d41342;
-  color: #ffffff;
-}
-
-.appeal-two {
-  background: #ffffff;
-  color: #d41443;
-}
-
-.appeal-two:hover, .appeal-two:focus {
-  background: #ecebeb;
-}
-
-.hero {
-  display: block;
-  height: 502px;
-  background-image: url(../images/hero/mob-icecream.png), radial-gradient(circle farthest-side at 65% 51.5%, #ffa5ba 172px, #ffb8ca 172px);
-  background-size: 171px, cover;
-  background-repeat: no-repeat;
-  background-position: left 63% bottom 0, left 0 top 0;
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    height: 399px;
-    background-image: url(../images/hero/tab-icecream.png), radial-gradient(circle farthest-side at 61% 52%, #ffa5ba 161px, #ffb8ca 161px);
-    background-size: 143px, cover;
-    background-position: left 58.5% bottom 0, left 0 top 0;
-=======
   .how-its-made {
     padding: 125px 115px;
     background-repeat: no-repeat;
@@ -373,32 +557,6 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
-  .hero {
-    height: 665px;
-    background-image: url(../images/hero/desktop-icecream.png), radial-gradient(circle farthest-side at 66% 53.5%, #ffa5ba 269px, #ffb8ca 269px);
-    background-size: 236px, cover;
-    background-position: left 56% bottom 0, left 0 top 0;
-  }
-}
-
-.hero-titul {
-  width: 220px;
-  margin-top: 193px;
-  font-family: Titan One;
-  font-weight: normal;
-  font-size: 26px;
-  line-height: 1.15;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-@media screen and (min-width: 768px) {
-  .hero-titul {
-    margin-top: 102px;
-    font-size: 22px;
-    line-height: 1.14;
-=======
   .cow-text-content {
     padding-left: 74px;
     padding-top: 55px;
@@ -522,25 +680,6 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
-  .hero-titul {
-    margin-top: 171px;
-    width: 280px;
-    font-size: 38px;
-    line-height: 1.16;
-  }
-}
-
-.hero-tityl-one {
-  font-size: 48px;
-  line-height: 0.96;
-  color: #d41443;
-}
-
-@media screen and (min-width: 768px) {
-  .hero-tityl-one {
-    font-size: 34px;
-    line-height: 0.91;
-=======
   .fact-title {
     font-size: 58px;
     margin-bottom: 25px;
@@ -564,32 +703,6 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
-  .hero-tityl-one {
-    font-size: 58px;
-    line-height: 0.9;
-  }
-}
-
-.hero-btn {
-  height: 24px;
-  margin-top: 19px;
-  padding: 0 14px;
-  border-radius: 20px;
-  /*шрифты*/
-  font-family: DM Sans;
-  font-weight: 400;
-  font-size: 8px;
-  line-height: 1.25;
-}
-
-.hero-btn:last-child {
-  margin-left: 8px;
-}
-
-@media screen and (min-width: 768px) {
-  .hero-btn {
-    margin-top: 20px;
-=======
   .fact-title::before {
     margin-top: 40px;
   }
