--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -1,27 +1,43 @@
-@mixin for($mobile) {
-  @media screen and (width: 480px) {
-    @content;
+@mixin fonts($fs, $fw, $lh, $ls: 0.01em) {
+  font-size: $fs;
+  font-weight: $fw;
+  line-height: $lh;
+  letter-spacing: $ls;
+}
+
+@mixin for-size($range) {
+  $mobile: 480px;
+  $tablet: 768px;
+  $desktop: 1200px;
+
+  @if $range == mobile-only {
+    @media screen and (max-width: #{$tablet - 1}) {
+      @content;
+    }
+  } @else if $range == mobile {
+    @media screen and (min-width: $mobile) {
+      @content;
+    }
+  } @else if $range == tablet-only {
+    @media screen  and (min-width: $tablet) and (max-width: #{$desktop - 1}) {
+      @content;
+    }
+  } @else if $range == tablet {
+    @media screen and (min-width: $tablet) {
+      @content;
+    }
+  } @else if $range == desktop {
+    @media screen and (min-width: $desktop) {
+      @content;
+    }
   }
 }
 
-@mixin for($tablet) {
-  @media screen and (width: 768px) {
-    @content;
-  }
-}
+// usage
+// .my-box {
+//   padding: 10px;
 
-@mixin for($desktop) {
-  @media screen and (width: 1200px) {
-    @content;
-  }
-}
-
-//Для подключения миксина нужно прописать:
-// К примеру мы к контейнеру добовляем стили для мобильной версии
-//    .container{
-//        backgraund-color: blue
-//        @include for $mobile{
-// подключаем стили, на пример:
-//        color: green;
-//        }
-//    }
+//   @include for-size(tablet) {
+//     padding: 20px;
+//   }
+//}
