Добавляет стили для header и подключает скрипт открытия\закрытия меню

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@
 // layout
 @import './layout/garant';
 // @import './layout/footer';
-// @import './layout/header';
+@import './layout/header';
 // @import './layout/hero';
 @import './layout/how-we-do-it';
 @import './layout/programm';
