--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <!-- Светлая тема -->
       <div class="footer-light">
         <!-- LOGO -->
-        <div class="footer-logo">
+        <div class="logo-wrapper">
         <a class="logo" href="index.html">
           <div class="logo-secondfloor">
             Hell
@@ -30,7 +30,7 @@
         <!-- Инстаграмм -->
         <a class="footer-instagram" href="https://www.instagram.com/?hl=ru">
           <img
-            src="./images/footer/instagram-png.png"
+            src="./images/footer/instagram.svg"
             alt="instagram"
             width="40"
             height="40"
