--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,6 +3,7 @@
   <div class="container">
     <nav class="navigation">
       <!-- LOGO -->
+      <div class="logo-wrapper">
       <a class="logo" href="index.html">
         <div class="logo-secondfloor">
           Hell
@@ -16,6 +17,7 @@
           <span class="eng">английский</span>
         </div>
       </a>
+    </div>
 
       <!-- NAV-DESKTOP-->
       <ul class="nav-list-desktop">
@@ -23,7 +25,7 @@
           <a class="nav-link-desktop" href="index.html">Программы обучения</a>
         </li>
         <li class="nav-item-desktop">
-          <a class="nav-link-desktop current" href="#">О нас</a>
+          <a class="nav-link-desktop" href="#">О нас</a>
         </li>
         <li class="nav-item-desktop">
           <a class="nav-link-desktop" href="#">Варианты обучения</a>
@@ -45,20 +47,6 @@
       </div>
       <!-- BURGER-MENU  -->
       <div class="burger-menu container" id="menu-container" data-menu>
-        <div class="logo-wrapper">
-          <a class="logo" href="index.html">
-            <span class="logo-secondfloor menu">
-              HEII
-              <svg class="logo-fire" width="14" height="19">
-                <use href="./images/sprite.svg#icon-fire"></use>
-              </svg>
-              EN
-            </span>
-            <span class="logo-firstfloor menu"
-              ><span class="accent">aдский</span> английский</span
-            >
-          </a>
-        </div>
 
         <!-- BURGER-MENU NAVIGATION -->
         <ul class="nav-list">
