--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -4,6 +4,7 @@
   font-style: normal;
   line-height: 0;
   color: var(--primary-text-color);
+  z-index: 3;
 }
 
 .burger-menu.is-open + .logo {
@@ -66,4 +67,7 @@
     margin-bottom: 5px;
     margin-left: 4px;
   }
+}
+.logo.inverse {
+  color: var(--white-color);
 }
