--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,20 +3,18 @@
     padding-top: 30px;
     padding-bottom: 30px;
 }
-.footer-logo {
+.logo-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-bottom: 20px;
-    margin-bottom: 20px;
 }
 
 .footer-tel {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 29.79px;
+
     
     &:hover .footer-tel-number {
         color: var(--accent-color);
@@ -73,12 +71,13 @@
         padding-bottom: 40px;
         display: flex;
     } 
-    .footer-logo {
+    .logo-wrapper {
     justify-content: start;    
     }
     
     .footer-contacts {
          display: flex;
+         align-items: center;
      }
 
     .footer-instagram {
@@ -88,8 +87,8 @@
         &::before {
         content: "";
         position: absolute;
-        top: 10%;
-        left: -50%;
+        top: 6%;
+        left: -60%;
         height: 40px;
         width: 1px;
         background-color: var(--secondary-text-color);
@@ -119,7 +118,7 @@
     .footer-light {
         justify-content: space-between;
     }
-    .footer-logo {
+    .logo-wrapper {
         margin-right: 0;
     }
 }
