--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<article id="hero" class="hero">
+<section id="hero" class="hero">
     <div class="container">
         <div class="hero__card">
             <h1 class="hero__title">Комплексная подготовка к ВНО<br>
@@ -12,4 +12,4 @@
         </div>
         </div>
     </div>
-</article>
+</section>
