--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -164,6 +164,26 @@
     padding: 27px 25px;
   }
   .hero__img {
+    top: -63px;
+    left: 640px;
+    width: 674px;
+    height: 574px;
+    background-image: url('/images/hero/img-02-hero-1344.png'),
+      url('/images/hero/img-01-hero-1344.png');
+    background-size: 574px 574px, 674px 482px;
+    background-position: top 0 left 81px, top 38px left 0;
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero__img {
+      background-image: url('/images/hero/img-02-hero-1344@2x.png'),
+        url('/images/hero/img-01-hero-1344@2x.png');
+    }
+  }
+}
+@media screen and (min-width: 1680px) {
+  .hero__img {
     top: -79px;
     left: 610px;
     width: 842px;
