--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -7,18 +7,16 @@
   }
 
   @media screen and (min-width: 1344px) {
-    padding: 55px 0 55px 168px;
+    padding: 55px 0 55px 0;
   }
 }
 
 .footer__list {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  text-align: center;
 
   @media screen and (min-width: 768px) {
-    justify-content: start;
-    flex-direction: row;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -34,7 +32,6 @@
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 203px;
-    vertical-align: center;
   }
 
   @media screen and (min-width: 1344px) {
@@ -127,16 +124,18 @@
 }
 
 .footer__copyright {
+  text-align: center;
   background-color: $black;
-  padding: 21px 31px 21px 32px;
+  padding: 21px 0;
 
   @media screen and (min-width: 768px) {
-    padding: 22px 25px 21px 25px;
+    padding: 22px 0 21px 0;
+    text-align: start;
   }
 
-  @media screen and (min-width: 1344px) {
-    padding: 22px 0 21px 168px;
-  }
+  // @media screen and (min-width: 1344px) {
+  //   padding: 22px 0 21px 0;
+  // }
 }
 
 .footer__copyright--text {
