--- a/src/sass/layout/_registration-form.scss
+++ b/src/sass/layout/_registration-form.scss
@@ -16,8 +16,8 @@
     background-image: url('../images/registration-form/back-mob-png2x.png');
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    padding: 50px 40px 71px 40px;
+  @media screen and (min-width: 768px) {
+    padding: 50px 0 71px 0;
     background-image: url('../images/registration-form/back-tablet-png1x.png');
 
     @media screen and (min-device-pixel-ratio: 2),
@@ -80,7 +80,6 @@
   @media screen and (min-width: 768px) {
     font-size: 14px;
     line-height: 1.214;
-    padding: 0 118px;
     margin-bottom: 40px;
   }
 
@@ -125,28 +124,19 @@
     color: $white;
 
     @media screen and (min-width: 1344px) {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
       font-size: 20px;
       line-height: 1.2;
+      width: 478px;
+      height: 70px;
     }
   }
 
   @media screen and (min-width: 768px) {
     width: 390px;
     height: 48px;
-  }
-
-  @media screen and (min-width: 1200px) and (max-width: 1399px) {
-    width: 478px;
-    height: 70px;
-    margin-left: 90px;
-    margin-right: 90px;
-  }
-
-  @media screen and (min-width: 1400px) {
-    width: 478px;
-    height: 70px;
-    margin-left: 135px;
-    margin-right: 135px;
   }
 }
 
@@ -188,11 +178,17 @@
   }
 
   @media screen and (min-width: 1344px) {
-    margin-top: 60px;
+    margin-top: 80px;
     width: 354px;
     height: 70px;
     font-size: 14px;
     line-height: 1.214;
     letter-spacing: 0.14em;
+  }
+}
+.registration > .container {
+  @media screen and (min-width: 1344px) {
+    padding-left: 127px;
+    padding-right: 127px;
   }
 }
