--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,7 +1,7 @@
 <section class="locations">
     <!-- <div class="locations-white-block"></div> -->
 
-    <div class="container">
+    <div class="container-locatins">
 
         <ul class="locations-list">
             <li class="locations-item">
