--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -16,17 +16,41 @@
         }
 }
 
-.container {  
-    // @media screen and (min-width: 768px) {
-    // height: 460px;
+// .container {  
+//     // @media screen and (min-width: 768px) {
+//     // height: 460px;
 
-    @media screen and (min-width: 1280px) {
-        padding-right: 0;
-        padding-left: 0;
-        // height: 485px;
-    }
-}
+//     @media screen and (min-width: 1280px) {
+//         padding-right: 0;
+//         padding-left: 0;
+//         // height: 485px;
+//     }
+// }
    
+.container-locatins {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    // outline: 1px solid tomato;
+  
+    @media screen and (min-width: 320px) {
+      width: 320px;
+    }
+  
+    @media screen and (min-width: 768px) {
+      width: 768px;
+      padding-left: 34px;
+      padding-right: 34px;
+    }
+  
+    @media screen and (min-width: 1280px) {
+      width: 1280px;
+      padding-left: 115px;
+      padding-right: 115px;
+    }
+  }
+  
 .locations-list {
     position: relative;
     top: -88px;
@@ -79,7 +103,7 @@
         padding-left: 27px;
         padding-top: 50px;
         padding-bottom: 50px;
-        width: 210px;
+        width: 220px;
     }
     @media screen and (min-width: 1280px) {
         width: 330px;
